<resources>
    <string name="app_name">My GreenHouse</string>
    <string name="mygreenhouse_developer">MyGreenHouse Developer</string>
    <string name="missour">Missour</string>
    <string name="my_greenhouse_developer">My GreenHouse Developer</string>
    <string name="studio">Studio</string>
    <string name="todo">TODO</string>
    <string name="hello_farmer_ready_to_login">Hello Farmer, Ready to Login</string>
    <string name="sing_in_to_continue">Sing In to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">LogIn</string>
    <string name="new_user_sing_up">New User? SING UP</string>
    <string name="title_activity_dashbord">Dashbord</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="greenhouse_s_atmosphere">GreenHouse\'s Atmosphere</string>
</resources>